plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.5.12'
    id 'jacoco'
}

group = 'com.deviceshop'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    mercuryVersion = '4.4.4'
}

dependencies {
    implementation "org.platformlambda:rest-spring-3:${mercuryVersion}"

    testImplementation platform('org.junit:junit-bom:6.0.3')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

application {
    mainClass = 'org.platformlambda.core.system.AutoStart'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-proc:full' << '-Xlint:deprecation'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
}
